levm: benchs: ci: Fix CI for now

--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -2,9 +2,9 @@ name: LEVM
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["**"]
+    branches: [ "**" ]
     paths:
       - "crates/vm/levm/**"
 
@@ -116,6 +116,9 @@ jobs:
         uses: taiki-e/install-action@v2
         with:
           tool: hyperfine@1.16
+
+      - name: Install solc
+        uses: pontem-network/get-solc@master
 
       - name: Run benchmarks
         run: |
