--- a/.github/workflows/ci_bench_levm.yaml
+++ b/.github/workflows/ci_bench_levm.yaml
@@ -48,7 +48,7 @@ jobs:
             echo "#### Benchmark Results: ERC20 - Mint";
             cat ERC20Mint.md;
             echo "#### Benchmark Results: ERC20 - Approval";
-            cat ERC20ApprovalTransfer.md;
+            cat ERC20Approval.md;
           } > pr_result.md
 
       - name: Upload PR results
@@ -88,17 +88,9 @@ jobs:
           make revm-comparison-ci
           {
             echo "#### Benchmark Results: Factorial";
-            cat Factorial.md;
+            cat factorial.md;
             echo "#### Benchmark Results: Fibonacci";
-            cat Fibonacci.md;
-            echo "#### Benchmark Results: ManyHashes";
-            cat ManyHashes.md;
-            echo "#### Benchmark Results: ERC20 - Transfer";
-            cat ERC20Transfer.md;
-            echo "#### Benchmark Results: ERC20 - Mint";
-            cat ERC20Mint.md;
-            echo "#### Benchmark Results: ERC20 - Approval";
-            cat ERC20ApprovalTransfer.md;
+            cat fibonacci.md;
           } > main_result.md
 
       - name: Upload main results
