--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -9,7 +9,7 @@ ethrex-storage = { path = "../storage/store", default-features = false }
 ethrex-levm = { path = "./levm", optional = true }
 ethrex-trie = { path = "../storage/trie", default-features = false }
 ethrex-rlp = { path = "../common/rlp", default-features = false }
-revm = { version = "14.0.3", features = [
+revm = { version = "18.0.0", features = [
   "serde",
   "std",
   "serde-json",
@@ -18,8 +18,8 @@ revm = { version = "14.0.3", features = [
 ], default-features = false }
 
 # These dependencies must be kept up to date with the corresponding revm version, otherwise errors may pop up because of trait implementation mismatches
-revm-inspectors = { version = "0.8.1" }
-revm-primitives = { version = "10.0.0", features = [
+revm-inspectors = { version = "=0.13.0" }
+revm-primitives = { version = "14.0.0", features = [
   "std",
 ], default-features = false }
 bytes.workspace = true
