--- a/crates/l2/prover/bench/Cargo.toml
+++ b/crates/l2/prover/bench/Cargo.toml
@@ -41,3 +41,11 @@ futures-util = "0.3.31"
 tokio-utils = "0.1.2"
 again = "0.1.2"
 lazy_static = "1.5.0"
+bincode = "1.3.3"
+
+[features]
+## risc0
+build_risc0 = ["zkvm_interface/build_risc0", "ethrex-prover/build_risc0"]
+gpu = ["ethrex-prover/gpu"]
+## sp1
+build_sp1 = ["zkvm_interface/build_sp1", "zkvm_interface/build_risc0"]
