--- a/crates/vm/levm/Cargo.toml
+++ b/crates/vm/levm/Cargo.toml
@@ -15,6 +15,7 @@ keccak-hash.workspace = true
 thiserror.workspace = true
 serde = { workspace = true, features = ["derive", "rc"] }
 serde_json.workspace = true
+lazy_static.workspace = true
 
 sha3 = "0.10.8"
 datatest-stable = "0.2.9"
