--- a/.github/workflows/ci_bench_levm_in_pr.yaml
+++ b/.github/workflows/ci_bench_levm_in_pr.yaml
@@ -2,7 +2,7 @@ name: Benchmark LEVM vs REVM in PR
 
 on:
   pull_request:
-    branches: [ "**" ]
+    branches: ["**"]
     paths:
       - "crates/vm/levm/**"
 
@@ -104,7 +104,7 @@ jobs:
   combine-results:
     name: Combine Benchmark Results
     runs-on: ubuntu-latest
-    needs: [ benchmark-pr, benchmark-main ]
+    needs: [benchmark-pr, benchmark-main]
     steps:
       - name: Download PR results
         uses: actions/download-artifact@v4
@@ -174,6 +174,7 @@ jobs:
           cd crates/vm/levm && awk '/Summary: /,/Frontier/' test_result.txt;
 
       - name: Check EF-TESTS status is 100%
+        id: check_tests
         run: |
           cd crates/vm/levm
           if [ "$(awk '/Summary:/ {print $(NF)}' test_result.txt)" != "(100.00%)" ]; then
@@ -201,7 +202,7 @@ jobs:
           body-includes: "Summary:"
 
       - name: Create Comment
-        if: ${{ github.event_name == 'pull_request' }}
+        if: ${{ steps.check_tests.outcome == 'failure' && github.event_name == 'pull_request' }}
         uses: peter-evans/create-or-update-comment@v4
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
