--- a/.github/workflows/ci_bench_levm_in_pr.yaml
+++ b/.github/workflows/ci_bench_levm_in_pr.yaml
@@ -175,6 +175,7 @@ jobs:
 
       - name: Check EF-TESTS status is 100%
         id: check_tests
+        continue-on-error: true
         run: |
           cd crates/vm/levm
           if [ "$(awk '/Summary:/ {print $(NF)}' test_result.txt)" != "(100.00%)" ]; then
