--- a/.github/workflows/daily_reports.yaml
+++ b/.github/workflows/daily_reports.yaml
@@ -192,6 +192,7 @@ jobs:
 
       - name: Check EF-TESTS status is 100%
         id: check_tests
+        continue-on-error: true
         run: |
           cd crates/vm/levm
           if [ "$(awk '/**Summary**:/ {print $(NF)}' cmd/ef_tests/levm/levm_ef_tests_summary_github.txt)" != "(100.00%)" ]; then
