--- a/.github/workflows/ci_bench_levm_in_pr.yaml
+++ b/.github/workflows/ci_bench_levm_in_pr.yaml
@@ -202,12 +202,29 @@ jobs:
           comment-author: "github-actions[bot]"
           body-includes: "Summary:"
 
+      # If we have a failure, means that some ef-tests don't pass.
+      # If comment-id == '', means that we haven't created the comment.
+      # If both conditions are met, create the comment with the summary.
       - name: Create Comment
-        if: ${{ steps.check_tests.outcome == 'failure' && github.event_name == 'pull_request' }}
+        if: ${{ steps.check_tests.outcome == 'failure' && github.event_name == 'pull_request' && steps.fc.outputs.comment-id == '' }}
         uses: peter-evans/create-or-update-comment@v4
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           body-path: test_summary.txt
+          edit-mode: replace
+
+      # If we don't have a failure, means that all ef-tests pass.
+      # If comment-id != '', means that we've already created the comment.
+      # If both conditions are met, update the comment saying that all tests pass.
+      - name: Create Comment
+        if: ${{ steps.check_tests.outcome != 'failure' && github.event_name == 'pull_request' && steps.fc.outputs.comment-id != '' }}
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            All EF-TESTS pass.
           edit-mode: replace
