--- a/.github/workflows/ci_bench_levm_in_pr.yaml
+++ b/.github/workflows/ci_bench_levm_in_pr.yaml
@@ -203,10 +203,9 @@ jobs:
           body-includes: "Summary:"
 
       # If we have a failure, means that some ef-tests don't pass.
-      # If comment-id == '', means that we haven't created the comment.
-      # If both conditions are met, create the comment with the summary.
+      # If the condition is met, create or update the comment with the summary.
       - name: Create Comment
-        if: ${{ steps.check_tests.outcome == 'failure' && github.event_name == 'pull_request' && steps.fc.outputs.comment-id == '' }}
+        if: ${{ steps.check_tests.outcome == 'failure' && github.event_name == 'pull_request' }}
         uses: peter-evans/create-or-update-comment@v4
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
@@ -218,7 +217,7 @@ jobs:
       # If we don't have a failure, means that all ef-tests pass.
       # If comment-id != '', means that we've already created the comment.
       # If both conditions are met, update the comment saying that all tests pass.
-      - name: Create Comment
+      - name: Update Comment -- ALL
         if: ${{ steps.check_tests.outcome != 'failure' && github.event_name == 'pull_request' && steps.fc.outputs.comment-id != '' }}
         uses: peter-evans/create-or-update-comment@v4
         with:
