--- a/crates/networking/rpc/Cargo.toml
+++ b/crates/networking/rpc/Cargo.toml
@@ -25,6 +25,7 @@ jsonwebtoken.workspace = true
 rand.workspace = true
 tokio-util.workspace = true
 reqwest.workspace = true
+k256 = { version = "0.13.3", features = ["ecdh"] }
 
 [dev-dependencies]
 hex-literal = "0.4.1"
