--- a/.github/workflows/daily_reports.yaml
+++ b/.github/workflows/daily_reports.yaml
@@ -10,101 +10,12 @@ env:
   RUST_VERSION: 1.81.0
 
 jobs:
-  run-hive:
-    name: Hive (${{ matrix.vm }}) - ${{ matrix.test.name }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        vm: [levm, revm]
-        test:
-          - {
-              name: "Rpc Compat tests",
-              file_name: rpc-compat,
-              simulation: ethereum/rpc-compat,
-            }
-          - { name: "Devp2p eth tests", file_name: devp2p, simulation: devp2p }
-          - {
-              name: "Cancun Engine tests",
-              file_name: engine,
-              simulation: ethereum/engine,
-            }
-          - { name: "Sync tests", file_name: sync, simulation: ethereum/sync }
-
-    steps:
-      - name: Pull image
-        if: ${{ matrix.vm == 'revm' }}
-        run: |
-          docker pull ghcr.io/lambdaclass/ethrex:latest
-          docker tag ghcr.io/lambdaclass/ethrex:latest ethrex:latest
-
-      - name: Checkout sources
-        uses: actions/checkout@v4
-
-      - name: Build Image with LEVM
-        if: ${{ matrix.vm == 'levm' }}
-        run: cd crates/vm/levm && make build-image-levm
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
-
-      - name: Setup Hive
-        run: make setup-hive
-
-      - name: Run Hive Simulation
-        run: cd hive && ./hive --client ethrex --sim ${{ matrix.test.simulation }} --sim.parallelism 16
-        continue-on-error: true
-
-      - name: Upload results
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.test.file_name }}_${{ matrix.vm }}_logs
-          path: hive/workspace/logs/*-*.json
-          if-no-files-found: error
-
-  hive-report:
-    name: Generate and Save report (${{ matrix.vm }})
-    needs: run-hive
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        vm: [levm, revm]
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
-
-      - name: Rustup toolchain install
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: ${{ env.RUST_VERSION }}
-
-      - name: Download all results
-        uses: actions/download-artifact@v4
-        with:
-          path: hive/workspace/logs
-          pattern: "*_${{ matrix.vm }}_logs"
-          merge-multiple: true
-
-      - name: Caching
-        uses: Swatinem/rust-cache@v2
-
-      - name: Generate the hive report
-        run: cargo run -p hive_report > results.md
-
-      - name: Upload ${{matrix.vm}} result
-        uses: actions/upload-artifact@v4
-        with:
-          name: results_${{matrix.vm}}.md
-          path: results.md
-          if-no-files-found: error
-
-      - name: Post results in summary
-        run: |
-          echo "# Hive coverage report (${{ matrix.vm }})" >> $GITHUB_STEP_SUMMARY
-          cat results.md >> $GITHUB_STEP_SUMMARY
+  hive-report-creation:
+    uses: ./.github/workflows/common_hive_reports.yaml
 
   hive-diff-report:
     name: Post tests diff to levm slack
-    needs: hive-report
+    needs: hive-report-creation
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
@@ -127,12 +38,6 @@ jobs:
         run: cp results.md results_revm.md
 
       - name: Create diff message
-        env:
-          SLACK_WEBHOOK: >
-            ${{ github.event_name == 'workflow_dispatch'
-              && secrets.TEST_CHANNEL_SLACK
-              || secrets.LEVM_SLACK_WEBHOOK
-            }}
         run: |
           bash .github/scripts/levm_revm_diff.sh results_revm.md results_levm.md >> diff.md
           cat diff.md >> $GITHUB_STEP_SUMMARY
