Add current P2P refactor implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/blockchain/dev",
     "crates/common",
     "crates/networking/p2p",
+    "crates/networking/p2p_actors",
     "crates/networking/rpc",
     "crates/storage/store",
     "crates/vm",
