--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -18,8 +18,7 @@ env:
 
 jobs:
   ef-test:
-    # "Integration Test" is a required check, don't change the name
-    name: Integration Test
+    name: EF Tests Check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
@@ -62,9 +61,9 @@ jobs:
   hive-report-creation:
     uses: ./.github/workflows/common_hive_reports.yaml
   # Check we don't have a regression
-  hive-test-check:
+  hive-test:
     # "Integration Test" is a required check, don't change the name
-    name: Integration Test
+    name: Hive Tests Check
     needs: hive-report-creation
     runs-on: ubuntu-latest
     steps:
@@ -99,6 +98,27 @@ jobs:
           else
             echo "Regression found."
             exit 1;
+          fi
+
+  # The purpose of this job is to add it as a required check in GitHub so that we don't have to add every individual job as a required check
+  all-tests:
+    # "Integration Test" is a required check, don't change the name
+    name: Integration Test
+    runs-on: ubuntu-latest
+    needs: [hive-test, ef-test]
+    # Make sure this job runs even if the previous jobs failed or were skipped
+    if: ${{ always() && needs.hive-test.result != 'skipped' && needs.ef-test.result != 'skipped' }}
+    steps:
+      - name: Check if any job failed
+        run: |
+          if [ "${{ needs.hive-test.result }}" != "success" ]; then
+            echo "Job Hive Tests Check failed"
+            exit 1
+          fi
+
+          if [ "${{ needs.ef-test.result }}" != "success" ]; then
+            echo "Job EF Tests Check failed"
+            exit 1
           fi
 
   test:
