--- a/crates/vm/levm/bench/revm_comparison/Cargo.toml
+++ b/crates/vm/levm/bench/revm_comparison/Cargo.toml
@@ -9,12 +9,15 @@ path = "src/lib.rs"
 
 [dependencies]
 ethrex-levm = { path = "../../" }
-ethrex-core.workspace = true
+ethrex-vm = { path = "../../../" }
+ethrex-rpc-client.workspace = true
 hex.workspace = true
 bytes.workspace = true
 
 revm = "9.0.0"
 sha3 = "0.10.8"
+tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
+bincode = "1.3.3"
 
 [[bin]]
 name = "compile"
@@ -23,3 +26,7 @@ path = "src/compile.rs"
 [[bin]]
 name = "benchmark"
 path = "src/benchmark.rs"
+
+[[bin]]
+name = "benchmark-block"
+path = "src/benchmark_block.rs"
