Revert "DEBUG COMMIT: Debug CI"
This reverts commit b565207be6d8c40f61072f86bdac54821398d69f.

--- a/crates/vm/levm/Makefile
+++ b/crates/vm/levm/Makefile
@@ -130,7 +130,7 @@ revm-comparison-ci: compile-contracts
 build-revm-comparison:
 	cd bench/revm_comparison && \
 		CARGO_TARGET_DIR=../../target \
-		RUST_BACKTRACE=1 cargo build --release --bin benchmark
+		cargo build --release --bin benchmark
 
 ###### Build Client with LEVM ######
 
