--- a/cmd/ef_tests/levm/Cargo.toml
+++ b/cmd/ef_tests/levm/Cargo.toml
@@ -4,11 +4,11 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-ethrex-blockchain = { workspace = true, features = ["levm"] }
+ethrex-blockchain = { workspace = true }
 ethrex-core.workspace = true
 ethrex-storage.workspace = true
 ethrex-rlp.workspace = true
-ethrex-vm = { workspace = true, features = ["levm"] }
+ethrex-vm = { workspace = true }
 ethrex-levm = { path = "../../../crates/vm/levm" }
 serde.workspace = true
 serde_json.workspace = true
