--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -65,6 +65,12 @@ jobs:
       evm: levm
       job_type: trigger
 
+  hive-report-creation-main:
+    uses: ./.github/workflows/common_hive_reports.yaml
+    with:
+      evm: levm
+      job_type: main
+
   # Check we don't have a regression against main
   hive-test:
     if: ${{ github.event_name != 'merge_group' }}
@@ -86,16 +92,16 @@ jobs:
       - name: Download results (main)
         uses: actions/download-artifact@v4
         with:
-          name: results_levm_daily.md
+          name: results_levm_main.md
         # If we don't have the file it will use the result(1) file
         continue-on-error: true
 
       - name: Rename result (2)
-        run: cp results.md results_levm_daily.md
+        run: cp results.md results_levm_main.md
 
       - name: Create diff message
         run: |
-          bash .github/scripts/hive_levm_revm_diff.sh results_levm_daily.md results_levm.md >> diff.md
+          bash .github/scripts/hive_levm_revm_diff.sh results_levm_main.md results_levm.md >> diff.md
           cat diff.md >> $GITHUB_STEP_SUMMARY
 
       - name: Check Regression
