--- a/crates/vm/levm/bench/revm_comparison/Cargo.toml
+++ b/crates/vm/levm/bench/revm_comparison/Cargo.toml
@@ -11,6 +11,8 @@ path = "src/lib.rs"
 ethrex-levm = { path = "../../" }
 ethrex-vm = { path = "../../../" }
 ethrex-rpc-client.workspace = true
+ethrex-core.workspace = true
+ethrex-storage.workspace = true
 hex.workspace = true
 bytes.workspace = true
 
