feat: integrate root's Makefile

--- a/crates/l2/Makefile
+++ b/crates/l2/Makefile
@@ -73,11 +73,12 @@ init-l1-levm: ## 🚀 Initializes an L1 Lambda ethrex Client with LEVM
 	cargo run --release \
     --manifest-path ../../Cargo.toml \
     --bin ethrex \
-    --features dev,ethrex-blockchain/levm,ethrex-vm/levm -- \
+    --features "dev" -- \
     --network ${L1_GENESIS_FILE_PATH} \
     --http.port ${L1_PORT} \
     --http.addr 0.0.0.0 \
     --authrpc.port ${L1_AUTH_PORT} \
+	--evm levm \
     --datadir ${ethrex_L1_DEV_LIBMDBX}
 
 down-local-l1: ## 🛑 Shuts down the L1 Lambda ethrex Client
