--- a/.github/workflows/ci_bench_levm_in_pr.yaml
+++ b/.github/workflows/ci_bench_levm_in_pr.yaml
@@ -187,15 +187,15 @@ jobs:
         run: |
           cd crates/vm/levm && awk '/Summary: /,/Frontier/' test_result.txt;
 
-      - name: Check EF-TESTS status is 100%
-        id: check_tests
-        continue-on-error: true
-        run: |
-          cd crates/vm/levm
-          if [ "$(awk '/Summary:/ {print $(NF)}' test_result.txt)" != "(100.00%)" ]; then
-              echo "Percentage is not 100%."
-              exit 1
-          fi
+      # - name: Check EF-TESTS status is 100%
+      #   id: check_tests
+      #   continue-on-error: true
+      #   run: |
+      #     cd crates/vm/levm
+      #     if [ "$(awk '/Summary:/ {print $(NF)}' test_result.txt)" != "(100.00%)" ]; then
+      #         echo "Percentage is not 100%."
+      #         exit 1
+      #     fi
 
       - name: Create test summary
         if: ${{ github.event_name == 'pull_request' }}
