--- a/.github/workflows/daily_reports.yaml
+++ b/.github/workflows/daily_reports.yaml
@@ -108,19 +108,20 @@ jobs:
       - name: Run tests
         run: |
           cd crates/vm/levm
-          make generate-evm-ef-tests-report
+          make generate-evm-ef-tests-report | tee test_result.txt
 
       - name: Post results in summary
         run: |
+          cd crates/vm/levm
           echo "# Daily LEVM EF Tests Run Report" >> $GITHUB_STEP_SUMMARY
-          cat cmd/ef_tests/levm/levm_ef_tests_summary_github.txt >> $GITHUB_STEP_SUMMARY
+          cat test_result.txt >> $GITHUB_STEP_SUMMARY
 
       - name: Check EF-TESTS status is 100%
         id: check_tests
         continue-on-error: true
         run: |
           cd crates/vm/levm
-          if [ "$(awk '/**Summary**:/ {print $(NF)}' cmd/ef_tests/levm/levm_ef_tests_summary_github.txt)" != "(100.00%)" ]; then
+          if [ "$(awk '/**Summary**:/ {print $(NF)}' test_result.txt)" != "(100.00%)" ]; then
               echo "Percentage is not 100%."
               exit 1
           fi
