--- a/.github/workflows/common_hive_reports.yaml
+++ b/.github/workflows/common_hive_reports.yaml
@@ -39,17 +39,12 @@ jobs:
 
     steps:
       - name: Pull image
-        if: ${{ inputs.evm == 'revm' }}
         run: |
           docker pull ghcr.io/lambdaclass/ethrex:latest
           docker tag ghcr.io/lambdaclass/ethrex:latest ethrex:latest
 
       - name: Checkout sources
         uses: actions/checkout@v4
-
-      - name: Build Image with LEVM
-        if: ${{ inputs.evm == 'levm' }}
-        run: cd crates/vm/levm && make build-image-levm
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -58,7 +53,7 @@ jobs:
         run: make setup-hive
 
       - name: Run Hive Simulation
-        run: cd hive && ./hive --client ethrex --sim ${{ matrix.test.simulation }} --sim.parallelism 16
+        run: cd hive && ./hive --client ethrex --sim ${{ matrix.test.simulation }} --ethrex.flags "--evm ${{ intputs.evm }}" --sim.parallelism 16
         continue-on-error: true
 
       - name: Upload results
