--- a/.github/workflows/ci_bench_levm_in_pr.yaml
+++ b/.github/workflows/ci_bench_levm_in_pr.yaml
@@ -187,15 +187,15 @@ jobs:
         run: |
           cd crates/vm/levm && awk '/Summary: /,/Frontier/' test_result.txt;
 
-      # - name: Check EF-TESTS status is 100%
-      #   id: check_tests
-      #   continue-on-error: true
-      #   run: |
-      #     cd crates/vm/levm
-      #     if [ "$(awk '/Summary:/ {print $(NF)}' test_result.txt)" != "(100.00%)" ]; then
-      #         echo "Percentage is not 100%."
-      #         exit 1
-      #     fi
+      - name: Check EF-TESTS status is 100%
+        id: check_tests
+        continue-on-error: true
+        run: |
+          cd crates/vm/levm
+          if [ "$(awk '/Summary:/ {print $(NF)}' test_result.txt)" != "(100.00%)" ]; then
+              echo "Percentage is not 100%."
+              exit 1
+          fi
 
       - name: Create test summary
         if: ${{ github.event_name == 'pull_request' }}
@@ -216,28 +216,28 @@ jobs:
           comment-author: "github-actions[bot]"
           body-includes: "Summary:"
 
-      # # If we have a failure, means that some ef-tests don't pass.
-      # # If the condition is met, create or update the comment with the summary.
-      # - name: Create Comment
-      #   if: ${{ steps.check_tests.outcome == 'failure' && github.event_name == 'pull_request' }}
-      #   uses: peter-evans/create-or-update-comment@v4
-      #   with:
-      #     comment-id: ${{ steps.fc.outputs.comment-id }}
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     issue-number: ${{ github.event.pull_request.number }}
-      #     body-path: test_summary.txt
-      #     edit-mode: replace
+      # If we have a failure, means that some ef-tests don't pass.
+      # If the condition is met, create or update the comment with the summary.
+      - name: Create Comment
+        if: ${{ steps.check_tests.outcome == 'failure' && github.event_name == 'pull_request' }}
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body-path: test_summary.txt
+          edit-mode: replace
 
-      # # If we don't have a failure, means that all ef-tests pass.
-      # # If comment-id != '', means that we've already created the comment.
-      # # If both conditions are met, update the comment saying that all tests pass.
-      # - name: Update Comment -- ALL
-      #   if: ${{ steps.check_tests.outcome != 'failure' && github.event_name == 'pull_request' && steps.fc.outputs.comment-id != '' }}
-      #   uses: peter-evans/create-or-update-comment@v4
-      #   with:
-      #     comment-id: ${{ steps.fc.outputs.comment-id }}
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     issue-number: ${{ github.event.pull_request.number }}
-      #     body: |
-      #       Summary: All EF-TESTS pass.
-      #     edit-mode: replace
+      # If we don't have a failure, means that all ef-tests pass.
+      # If comment-id != '', means that we've already created the comment.
+      # If both conditions are met, update the comment saying that all tests pass.
+      - name: Update Comment -- ALL
+        if: ${{ steps.check_tests.outcome != 'failure' && github.event_name == 'pull_request' && steps.fc.outputs.comment-id != '' }}
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            Summary: All EF-TESTS pass.
+          edit-mode: replace
