--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -52,11 +52,11 @@ jobs:
           cd crates/vm/levm && awk '/Summary: /,/Frontier/' test_result.txt;
 
       - name: Check EF-TESTS status is 100%
-        # removed the exit 1 because we added new tests and the percentage is not 100%
         run: |
           cd crates/vm/levm
           if [ "$(awk '/Summary:/ {print $(NF)}' test_result.txt)" != "(100.00%)" ]; then
               echo "Percentage is not 100%."
+              # exit 1 # uncomment when we expect 100% pass-rate
           fi          
 
   hive-report-creation:
